--- a/src/app/search-benefits/benefit-result-list/benefit-result-list.component.html
+++ b/src/app/search-benefits/benefit-result-list/benefit-result-list.component.html
@@ -1,4 +1,4 @@
-<div class="search-result-box">
+<div class="search-result-box shadow-lg p-3 mb-10 bg-white rounded scrollbar-light-blue">
     <div *ngFor="let benefit of benefits">
         <app-benefit-result
         [title]=benefit.title
