--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
 <html lang="en">
-<header>
-  <app-header></app-header>
-</header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </div>
+    <body>
+      <div class="view" style="background-image: url('https://media.wired.com/photos/5c9040ee4950d24718d6da99/16:9/w_2400,h_1350,c_limit/shoppingcart-1066110386.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+        <header>
+          <app-header></app-header>
+        </header>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <router-outlet></router-outlet>
+              </div>
+            </div>
+          </div>
+        </div>
+    </body>
 </html>
+
