--- a/src/app/search-benefits/benefit-result/benefit-result.component.css
+++ b/src/app/search-benefits/benefit-result/benefit-result.component.css
@@ -46,8 +46,22 @@ img {
     color: black;
 }
 
+.expiration-span {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+    color: red;
+}
+
 .poweredby-span {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     color: gray;
+}
+
+.fixed{
+    width: 500px;
+}
+
+.text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
