--- a/src/app/search-benefits/search-bar/search-bar.component.html
+++ b/src/app/search-benefits/search-bar/search-bar.component.html
@@ -1,47 +1,33 @@
-<div class="container-fluid col-xl-12">
-    <div class="mx-auto">
-        <form>
-        <div class="form-row">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-10 col-lg-8">
-                        <form class="card card-sm">
-                            <div class="card-body row no-gutters align-items-center">
-                                <div class="col-auto">
-                                    <i class="fas fa-search h4 text-body"></i>
-                                </div>
-                                <div class="col search-box-item">
-                                    <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
-                                </div>
-                                <div class="col-auto search-box-item">
-                                    <select class="search-box-item source-select btn dropdown-toggle" (change)="changeSelection($event)">
-                                        <option value="" disabled>Choose your Source</option>
-                                        <option *ngFor="let source of Sources">{{source}}</option>
-                                        </select>
-                                </div>
-                                <div class="col-auto search-box-item">
-                                    <button id="search-button" class="btn btn-lg btn-success" type="submit">Search</button>
-                                </div>
-                                <!--end of col-->
-                            </div>
-                        </form>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+<div id="search-contianer" class="container-fluid col-xl-12" >
+    <div class="container mx-auto">
+        <div class="row justify-content-center" >
+            <div class="col-12 col-md-10 col-lg-8" >
+                <form class="card card-sm" #f="ngForm" (ngSubmit)="onSubmit()">
+                    <div class="card-body row no-gutters align-items-center shadow p-3 bg-white rounded  justify-content-center  special-card">
+                        <div class="col-md-6">
+                            <input class="form-control my-0 py-1 red-borrde search-box-item" type="search" placeholder="Search topics or keywords" aria-label="Search"
+                            name="searchInput"
+                            ngModel
+                            required>
+                        </div>
+                            <angular2-multiselect [data]="sources"
+                            [settings]="dropdownSettings" 
+                            (onSelect)="changeSelection($event)" 
+                            (onDeSelect)="changeSelection($event)"
+                            (onSelectAll)="changeSelection($event)"
+                            (onDeSelectAll)="changeSelection($event)"
+                            class="form-control"
+                            name="sourceSelection"
+                        ngModel></angular2-multiselect>
+                        <div class="col-md-1">
+                            <button type="submit" [disabled]="f.invalid" class="input-group-text  search-box-item" id="basic-text1"><i class="fas fa-search text-grey"></i></button>
+                        </div>
                     </div>
-                    <!--end of col-->
-                </div>
+                </form>
             </div>
-            <!-- <div class="col-12 col-md-7 mb-2">
-            <input type="text" class="search-box-item form-control form-control-lg rtl" placeholder="Insert your input here..">
-            </div> -->            
-            <!-- <div class="col-12 col-md-3">
-                <select class="search-box-item source-select btn dropdown-toggle" (change)="changeSelection($event)">
-                    <option value="" disabled>Choose your Source</option>
-                    <option *ngFor="let source of Sources">{{source}}</option>
-                 </select>
-            </div>
-            <div class="col-12 col-md-2">
-            <button type="submit" class="search-box-item btn btn-block btn-lg btn-primary">Find Benefits!</button>
-            </div>  -->
         </div>
-        </form>
-    </div>    
+    </div>
 </div>
+
